test/parser/datatypes-missing-name.b3.expect
Error:
5: datatype = Ctor()
            ^
expected a identifier start character

